<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_marginLeft="@dimen/_25sdp"
    android:layout_marginRight="@dimen/_25sdp"
    android:paddingLeft="@dimen/_25sdp"
    android:paddingRight="@dimen/_25sdp">

    <ImageView
        android:id="@+id/iv_close_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_black_24dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/_7sdp"
        android:layout_marginVertical="@dimen/_7sdp"
        android:elevation="@dimen/_5sdp"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_15sdp"
        app:cardBackgroundColor="@color/colorBlueLight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_popup_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:textStyle="bold"
                android:textSize="@dimen/_14ssp"
                android:text="@string/confirmation_popup_title_default"
                android:gravity="center"
                android:textAlignment="center"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:src="@drawable/ic_thumbs_up_down_black_24dp"
                />

            <TextView
                android:id="@+id/tv_popup_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:textAlignment="center"
                android:textSize="@dimen/_11ssp"
                android:gravity="center"
                android:text="@string/confirmation_popup_text_default"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_popup_yes"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/str_yes"
                    android:textSize="@dimen/_11ssp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_blue_round"

                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_popup_no"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/str_no"
                    android:textSize="@dimen/_11ssp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_blue_round"
                    android:textColor="@color/white" />


            </LinearLayout>



        </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>