<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_marginLeft="@dimen/_25sdp"
    android:layout_marginRight="@dimen/_25sdp"
    android:paddingLeft="@dimen/_25sdp"
    android:paddingRight="@dimen/_25sdp">

    <ImageView
        android:id="@+id/iv_close_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_black_24dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/_7sdp"
        android:layout_marginVertical="@dimen/_7sdp"
        android:elevation="@dimen/_5sdp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_popup_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:textStyle="bold"
                    android:textSize="@dimen/_14ssp"
                    android:text="@string/negative_popup_title_default"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textAlignment="center"/>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:src="@drawable/ic_error_outline_black_24dp"
                />

            <TextView
                android:id="@+id/tv_popup_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:textAlignment="center"
                android:textSize="@dimen/_11ssp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/negative_popup_text_default"/>


            <Button
                android:id="@+id/btn_popup_ok"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="wrap_content"
                android:text="@string/str_Ok"
                android:textSize="@dimen/_11ssp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_red_round"
                android:textColor="@color/white" />


        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>