<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_marginLeft="@dimen/_20sdp"
    android:layout_marginRight="@dimen/_20sdp"
   >

    <ImageView
        android:id="@+id/iv_close_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_black_24dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/_7sdp"
        android:visibility="gone"

        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_application"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        app:cardBackgroundColor="@color/gray_background"
        app:cardCornerRadius="@dimen/_5sdp"
        >
       <!-- android:layout_alignParentLeft="true"

        android:background="@android:color/transparent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"-->

        <LinearLayout

            android:layout_centerInParent="true"
            android:weightSum="100"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:background="@color/gray_background"
                android:layout_weight="20"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_alert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"

                    android:src="@drawable/confirmation"
                    />

                <!-- <TextView
                        android:id="@+id/textView_separator"
                        android:layout_width="@dimen/_1sdp"
                        android:layout_height="match_parent"
                        android:background="@color/gray_background" />-->
            </RelativeLayout>


        <LinearLayout
            android:background="@color/white"
            android:layout_weight="80"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:background="@color/white"
                >

                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/tv_popup_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/c2899c0"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/confirmation_popup_title_default"
                    android:gravity="center"
                    android:textAlignment="center"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">




                <TextView
                    android:id="@+id/tv_popup_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:textAlignment="center"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@color/color_text_gray"
                    android:gravity="center"
                    android:text="@string/confirmation_popup_text_default"/>


                <TextView
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/app_bg"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/_3sdp"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btn_popup_yes"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:text="@string/str_yes"
                        android:textSize="@dimen/_10ssp"
                        android:layout_marginBottom="@dimen/_2sdp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/button_blue_rect"
                        android:layout_marginEnd="@dimen/_2sdp"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/btn_popup_no"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:text="@string/str_no"
                        android:textSize="@dimen/_10ssp"
                        android:layout_marginBottom="@dimen/_2sdp"
                        android:layout_marginStart="@dimen/_2sdp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/button_red_rect"
                        android:textColor="@color/white" />


                </LinearLayout>
            </LinearLayout>




        </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>