<?xml version="1.0" encoding="utf-8"?>

<!--<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:paddingLeft="@dimen/_25sdp"
    android:paddingRight="@dimen/_25sdp"
    android:layout_marginLeft="@dimen/_25sdp"
    android:layout_marginRight="@dimen/_25sdp">

    <ImageView
        android:id="@+id/iv_close_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="@dimen/_7sdp"
        android:layout_marginVertical="@dimen/_7sdp"
        android:elevation="@dimen/_5sdp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/pop_up_alertbutton_top_bg"
                android:layout_gravity="center"
                android:gravity="center">


                <TextView
                    android:id="@+id/tv_popup_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/alert_popup_title_default"
                    android:textColor="@color/cf1ab00"
                    android:gravity="center"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/pop_up_two_button_bottom_bg">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:src="@drawable/ic_warning_black_24dp"
                    />

                <TextView
                    android:id="@+id/tv_popup_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:textAlignment="center"
                    android:textSize="@dimen/_10ssp"
                    android:gravity="center"
                    android:textColor="@color/cf1ab00"
                    android:text="@string/alert_popup_text_default"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/app_bg"
                    android:layout_marginBottom="@dimen/_5sdp"
                    />

                <Button
                    android:id="@+id/btn_popup_ok"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:text="@string/str_Ok"
                    android:textSize="@dimen/_10ssp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_yellow_rect"
                    android:textColor="@color/white" />
            </LinearLayout>


            </LinearLayout>


    </RelativeLayout>

</RelativeLayout>-->

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/_25sdp"
    android:layout_marginRight="@dimen/_25sdp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_application"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        app:cardBackgroundColor="@color/gray_background"
        app:cardCornerRadius="@dimen/_5sdp">


        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:weightSum="100"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <RelativeLayout
                android:background="@color/gray_background"
                android:layout_weight="20"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_alert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"

                    android:src="@drawable/alert_icon"
                    />

                <!-- <TextView
                        android:id="@+id/textView_separator"
                        android:layout_width="@dimen/_1sdp"
                        android:layout_height="match_parent"
                        android:background="@color/gray_background" />-->
            </RelativeLayout>

            <LinearLayout
                android:background="@color/white"

                android:layout_weight="80"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="@dimen/_5sdp"
                    android:id="@+id/tv_popup_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/alert_popup_title_doc"
                    android:textColor="@color/color_orange"
                    android:gravity="center"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/tv_popup_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:textAlignment="center"
                    android:textSize="@dimen/_10ssp"
                    android:gravity="center"
                    android:textColor="@color/color_text_gray"
                    android:text="@string/alert_popup_text_default"/>

                <View
                    android:background="@color/gray_background"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/_5sdp"/>

                <Button
                    android:id="@+id/btn_popup_doc_ok"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:text="@string/str_Ok"
                    android:textSize="@dimen/_10ssp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_yellow_rect"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
